correction z-index image

--- a/src/styles/components/_media.scss
+++ b/src/styles/components/_media.scss
@@ -260,7 +260,8 @@
         margin-bottom: -7rem;
         max-width: 35vw;
         -webkit-box-shadow: 0px 0px 23px 12px rgba(1,2,5,0.14); 
-        box-shadow: 0px 0px 23px 12px rgba(1,2,5,0.14);    
+        box-shadow: 0px 0px 23px 12px rgba(1,2,5,0.14);  
+        z-index: 6;  
     }
     /* BTN EXPLORE */
 
